--- a/calendar.html
+++ b/calendar.html
@@ -77,6 +77,12 @@
 	<main>
 		<aside>
 			<h4 class="ui header">My Courses</h4>
+			<ul class="ui link list courses">
+				<a class="active item">Home</a>
+				<a class="item">About</a>
+				<a class="item">Jobs</a>
+				<a class="item">Team</a>
+			</ul>
 		</aside>
 		<section id="calendar"></section>
 	</main>
@@ -110,7 +116,15 @@
 						<option value="backend">Backend</option>
 					</select>
 				</div>
-				<button class="ui button" type="submit">Create Course</button>
+				<div class="inline field">
+					<div class="ui toggle checkbox">
+						<input type="checkbox" tabindex="0" class="hidden" id="check-all-day">
+						<label>All Day</label>
+					</div>
+				</div>
+				<div class="actions">
+					<button class="ui button" type="submit">Create Course</button>
+				</div>
 			</form>
 		</div>
 	</div>
