added school to sidebar from db

--- a/calendar.html
+++ b/calendar.html
@@ -77,12 +77,9 @@
 	<main>
 		<aside id="my-courses">
 			<h4 class="ui header">My Courses</h4>
+			<button class="ui mini secondary basic button add-course">Add Course</button>
 			<ul class="ui link list courses">
-					<button class="ui mini secondary basic button add-course">Add Course</button>
-				<a class="active item">Home</a>
-				<a class="item">About</a>
-				<a class="item">Jobs</a>
-				<a class="item">Team</a>
+
 			</ul>
 		</aside>
 		<section id="calendar"></section>
@@ -158,8 +155,9 @@
 					</select>
 				</div> -->
 				<div class="actions">
-					<button class="ui button" type="submit">Create Course</button>
+					<button class="ui button" type="submit">Create School</button>
 				</div>
+				<div class="ui error message"></div>
 			</form>
 		</div>
 	</div>
@@ -197,6 +195,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
 		integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
 		crossorigin="anonymous"></script>
+	<script src="./semantic/components/form.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
 		integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
 		crossorigin="anonymous"></script>
