changed password begun

--- a/profile.html
+++ b/profile.html
@@ -27,17 +27,17 @@
 			<i class="settings icon"></i>
 			<div class="content">
 				Profile
-				<div class="sub header">Manage your account settings and set e-mail preferences.</div>
+				<div class="sub header">Manage your account settings and change password.</div>
 			</div>
 		</h2>
 		<form class="ui form">
 			<div class="field">
-				<label>First Name</label>
-				<input type="text" name="first-name" placeholder="First Name">
+				<label>Current Password</label>
+				<input type="password" name="current-password" placeholder="Password" id="old-password">
 			</div>
 			<div class="field">
-				<label>Last Name</label>
-				<input type="text" name="last-name" placeholder="Last Name">
+				<label>New Password</label>
+				<input type="password" name="password" placeholder="Password" id="new-password">
 			</div>
 			<button class="ui button" type="submit">Submit</button>
 		</form>
