displaying school description and popup detail refactor

--- a/calendar.html
+++ b/calendar.html
@@ -78,9 +78,6 @@
 		<aside id="my-courses">
 			<h4 class="ui header">My Courses</h4>
 			<button class="ui mini secondary basic button add-course">Add Course</button>
-			<ul class="ui link list course-list">
-
-			</ul>
 			<div class="ui floating labeled icon dropdown button">
 				<span class="text">Courses</span>
 				<i class="dropdown icon"></i>
@@ -88,6 +85,10 @@
 					<!-- Here list of courses will be displayed in a dropdown -->
 				</div>
 			  </div>
+			<ul class="ui link list course-list">
+				<!-- Here shows the information about the School. -->
+			</ul>
+
 		</aside>
 		<section id="calendar"></section>
 	</main>
