added jquery and semantic css to index

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<!-- Site Properties -->
 	<title>ZoCom</title>
 
-	<script src="assets/library/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="./semantic/components/form.js"></script>
+	<link rel="stylesheet" href="semantic.min.css">
 	<link rel="stylesheet" href="index.css">
 
 
