--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ZoCom</title>
+	<link rel="stylesheet" href="semantic.min.css">
 	<link rel="stylesheet" href="index.css">
 </head>
 
