--- a/calendar.html
+++ b/calendar.html
@@ -66,7 +66,7 @@
 	<!-- Create Calendar Course -->
 	<div class="ui modal create-calendar">
 		<i class="close icon"></i>
-		<div class="header">Create a Course</div>
+		<div class="header">Report an incident</div>
 		<div class="content">
 			<form class="ui form" id="course-form">
 				<div class="field">
